kubernetes/apps/networking/static-routes/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: networking
spec:
  type: ExternalName

  ports:
    - name: api
      port: 9000
    - name: http
      port: 9001

  externalName: lochnas.chestr.dev
