kubernetes/apps/networking/static-routes/minio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: networking
  annotations:
    hajimari.io/icon: carbon:object-storage
    hajimari.io/group: storage, database, and messaging

spec:
  ingressClassName: internal
  tls:
    - hosts:
        - minio.chestr.dev

  rules:
    - host: minio.chestr.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
